--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 
-
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -25,8 +24,8 @@
     Tobin Cavanaugh
 </header>
 
-<div class="splashscreen"></div>
-<div class="splashscreen-bg"></div>
+<div id="splashscreen" class="splashscreen"></div>
+<div id="splashscreen-bg" class="splashscreen-bg"></div>
 
 <!--Mute/Unmute Button-->
 <img class="top-right-button" onclick="idleHum(); toggleIcon(this, 'Icons/Speaker_Icon.png','Icons/Mute_Icon.png')"
