added random messages

--- a/_Blog/Blog.html
+++ b/_Blog/Blog.html
@@ -16,16 +16,10 @@
 
 <div class="split">
 
-    <div id="ListView" class="left">
-        <h5>The latest research shows that living conditions on Venus aren't actually that bad</h5>
+    <div id="ListView">
+        <h5 id="random-message">The latest research shows that living conditions on Venus aren't actually that bad</h5>
         <hr/>
-
         <ul id="DocumentList"></ul>
-    </div>
-
-
-    <div id="BlogView" class="right">
-        <header>Blog View</header>
     </div>
 
 
