--- a/_Blog/Blog.html
+++ b/_Blog/Blog.html
@@ -6,26 +6,23 @@
 </head>
 <body>
 
-<link rel="stylesheet" href="BlogStyle.css">
 
+<link rel="stylesheet" href="BlogStyle.css">
 <script type="module" src="split.js"></script>
 <script type="module" src="BlogScript.js"></script>
 
 <h1>Autoblog</h1>
-
 
 <div class="split">
 
     <div id="ListView">
         <h5 id="random-message">The latest research shows that living conditions on Venus aren't actually that bad</h5>
         <hr/>
-        <ul id="DocumentList"></ul>
+        <a href="PagesHTML/Test0.html">VVV</a>
+
     </div>
 
 
 </div>
-
-
-
 </body>
 </html>
