tweak to readme

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <h2><a href="https://github.com/TobinCavanaugh" target="_blank" onclick="playSound('click')">Readme.md</a></h2>
 
-    <div class="text-container" id="readme-id"></div>
+    <div class="text-container" id="readme-id" style="max-width: calc(100vw - var(--indent)); margin-left: 0"></div>
     <script>
         // URL of the text file
         const textFileURL = 'https://raw.githubusercontent.com/TobinCavanaugh/TobinCavanaugh/main/README.md';
