--- a/_Blog/Blog.html
+++ b/_Blog/Blog.html
@@ -18,7 +18,11 @@
     <div id="ListView">
         <h5 id="random-message">The latest research shows that living conditions on Venus aren't actually that bad</h5>
         <hr/>
-        <a href="PagesHTML/Test0.html">VVV</a>
+        <div id="Links">
+
+            <a href="PagesHTML/Test0.html">VVV</a>
+
+        </div>
 
     </div>
 
