--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"/>
+    <title>Hello, world!</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <meta name="description" content=""/>
+    <link rel="stylesheet" href="style.css">
+    <!--    <link rel="icon" href="favicon.png">-->
+
+    <!--Laila-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!--Averia-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Laila:wght@300;400;500;600;700&display=swap"
+          rel="stylesheet">
+</head>
+<body>
+
 <h1>Portfolio being rebuilt. Eta 4000 years</h1>
+
+<p>Lorem ipsum is a placeholder text used in web design and publishing. It is used to fill the space where the final
+    copy will eventually go. The text is derived from Cicero's De Finibus Bonorum et Malorum, a treatise on the
+    theory of ethics. The HTML Definition element is used to indicate the term being defined within the context of a
+    definition phrase or sentence1. To generate lorem ipsum text, you can simply write "lorem" and the number of
+    words you want to generate2.</p>
+
+
+<h2>Sites:</h2>
+
+<ul>
+    <li>
+        <a href="https://tobincavanaugh.github.io/fstr_docs/">fstr Documentation</a>
+        <blockquote>Documentation for the <a href="https://github.com/TobinCavanaugh/fstr">fstr</a> library</blockquote>
+    </li>
+
+    <br>
+
+    <li>
+        <a href="https://tobincavanaugh.github.io/ByteStuff/">ByteTools</a>
+        <blockquote>Web tools for dealing with C and bytes etc.</blockquote>
+    </li>
+</ul>
+
+
+</body>
+</html>
