--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!--Laila-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500;600;700&display=swap"
+          rel="stylesheet">
 
     <!--Averia-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,33 +20,79 @@
     <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Laila:wght@300;400;500;600;700&display=swap"
           rel="stylesheet">
 </head>
+
 <body>
+<div class="fullbg">
 
-<h1>Portfolio being rebuilt. Eta 4000 years</h1>
+    <br/>
+    <header>
+        <h1>Tobin Cavanaugh</h1>
+        <h3>Not a webdev</h3>
+    </header>
 
-<p>Lorem ipsum is a placeholder text used in web design and publishing. It is used to fill the space where the final
-    copy will eventually go. The text is derived from Cicero's De Finibus Bonorum et Malorum, a treatise on the
-    theory of ethics. The HTML Definition element is used to indicate the term being defined within the context of a
-    definition phrase or sentence1. To generate lorem ipsum text, you can simply write "lorem" and the number of
-    words you want to generate2.</p>
+    <br/>
 
+    <header>
+        <h2>About Me:</h2>
+        <p>
+            I'm Tobin Cavanaugh. I'm very very passionate about low level
+            programming,
+            and I aim to make a measurable impact on the field of computing. I'm
+            generally unimpressed with the quality of software and the direction
+            we
+            are
+            heading in, and I think we should look to the greats of the previous
+            generations of programmers, those like
+            <a href="https://www.bell-labs.com/usr/dmr/www/">Dennis Ritchie </a>,
+            (C, Unix)
+            <a href="https://www.cs.princeton.edu/~bwk/">Brian Kernighan </a>
+            (AWK, Unix), and
+            <a href="https://www-cs-faculty.stanford.edu/~knuth/"> Donald
+                Knuth</a>
+            (TeX, MMIX), to name a few.
+        </p>
+    </header>
+    <br/>
 
-<h2>Sites:</h2>
+    <header>
+        <h2>Resume:</h2>
+        <a href="https://github.com/TobinCavanaugh/Resumes/blob/main/current.pdf">
+            https://github.com/TobinCavanaugh/Resumes/blob/main/current.pdf</a>
+        (~64KB)
+    </header>
 
-<ul>
-    <li>
-        <a href="https://tobincavanaugh.github.io/fstr_docs/">fstr Documentation</a>
-        <blockquote>Documentation for the <a href="https://github.com/TobinCavanaugh/fstr">fstr</a> library</blockquote>
-    </li>
+    <br/>
 
-    <br>
+    <header>
+        <h2>Sites:</h2>
 
-    <li>
-        <a href="https://tobincavanaugh.github.io/ByteStuff/">ByteTools</a>
-        <blockquote>Web tools for dealing with C and bytes etc.</blockquote>
-    </li>
-</ul>
+        <ul>
+            <li>
+                <span class="inlinecode">fstr.h</span> Documentation:
+                <a href="https://tobincavanaugh.github.io/fstr_docs/">fstr
+                    docs</a>
+                <blockquote>Documentation for the <a
+                        href="https://github.com/TobinCavanaugh/fstr">fstr</a>
+                    library
+                </blockquote>
+            </li>
 
+            <li>
+                <a href="https://tobincavanaugh.github.io/ByteStuff/">ByteTools</a>
+                <blockquote>Web tools for dealing with C and bytes etc.
+                </blockquote>
+            </li>
 
+            <li>
+                <span class="inlinecode">sstr.h</span> Documentation: <a
+                    href="https://tobincavanaugh.github.io/sstr/">sstr
+                docs</a>
+                <blockquote>A library for dynamic stack based strings in C.
+                </blockquote>
+            </li>
+        </ul>
+    </header>
+
+</div>
 </body>
 </html>
