--- a/index.html
+++ b/index.html
@@ -19,15 +19,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Laila:wght@300;400;500;600;700&display=swap"
           rel="stylesheet">
+
+    <!--lora-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+          rel="stylesheet">
 </head>
 
 <body>
-<div class="fullbg">
+<div class="fullbg" style="margin: auto; width: 65rem; padding-bottom: 5em">
 
     <br/>
     <header>
         <h1>Tobin Cavanaugh</h1>
-        <h3>Not a webdev</h3>
+        <h3>Low Level Programmer. Not a webdev</h3>
     </header>
 
     <br/>
@@ -43,8 +49,8 @@
             are
             heading in, and I think we should look to the greats of the previous
             generations of programmers, those like
-            <a href="https://www.bell-labs.com/usr/dmr/www/">Dennis Ritchie </a>,
-            (C, Unix)
+            <a href="https://www.bell-labs.com/usr/dmr/www/">Dennis Ritchie</a>,
+            (C, Unix),
             <a href="https://www.cs.princeton.edu/~bwk/">Brian Kernighan </a>
             (AWK, Unix), and
             <a href="https://www-cs-faculty.stanford.edu/~knuth/"> Donald
@@ -58,14 +64,21 @@
         <h2>Resume:</h2>
         <a href="https://github.com/TobinCavanaugh/Resumes/blob/main/current.pdf">
             https://github.com/TobinCavanaugh/Resumes/blob/main/current.pdf</a>
-        (~64KB)
+        (~180KB)
+    </header>
+
+    <br/>
+
+    <header>
+        <h2>Github:</h2>
+        <a href="https://github.com/TobinCavanaugh">
+            https://github.com/TobinCavanaugh </a>
     </header>
 
     <br/>
 
     <header>
         <h2>Sites:</h2>
-
         <ul>
             <li>
                 <span class="inlinecode">fstr.h</span> Documentation:
@@ -92,6 +105,7 @@
             </li>
         </ul>
     </header>
+
 
 </div>
 </body>
