--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>Hello, world!</title>
+    <title>Tobin Cavanaugh</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="description" content=""/>
     <link rel="stylesheet" href="style.css">
@@ -28,11 +28,11 @@
 </head>
 
 <body>
-<div class="fullbg" style="margin: auto; width: 65rem; padding-bottom: 5em">
+<div class="fullbg" style="margin: auto; width: 50rem; padding-bottom: 5em">
 
     <br/>
     <header>
-        <h1>Tobin Cavanaugh</h1>
+        <h1 title="Tobin Samuel Cavanaugh">Tobin Cavanaugh</h1>
         <h3>Low Level Programmer. Not a webdev</h3>
     </header>
 
@@ -45,17 +45,14 @@
             programming,
             and I aim to make a measurable impact on the field of computing. I'm
             generally unimpressed with the quality of software and the direction
-            we
-            are
-            heading in, and I think we should look to the greats of the previous
-            generations of programmers, those like
+            we are heading in, and I think we should look to the greats of the
+            previous generations of programmers, those like
             <a href="https://www.bell-labs.com/usr/dmr/www/">Dennis Ritchie</a>,
             (C, Unix),
             <a href="https://www.cs.princeton.edu/~bwk/">Brian Kernighan </a>
             (AWK, Unix), and
-            <a href="https://www-cs-faculty.stanford.edu/~knuth/"> Donald
-                Knuth</a>
-            (TeX, MMIX), to name a few.
+            <a href="https://www-cs-faculty.stanford.edu/~knuth/">
+                Donald Knuth</a> (TeX, MMIX), to name a few.
         </p>
     </header>
     <br/>
